# dpp

./: LICENSE  README.md  checkpoints.lua  main.lua  opts.lua  plotter.lua  train.lua
DPPinPytorch/: PositivePowBias_32_512_32_32.tc.cuda  PositivePowBias_32_512_32_32.tc.options  PositivePowBias_32_512_32_32.tc_backward.cuda  PositivePowBias_32_512_32_32.tc_backward.options  dpp.py  positive bias.py
models/: cudads.lua  init.lua  resnetdpp.lua
visinf_package/: CMakeLists.txt  CWeightCalc.lua  DPP_asym_full.lua  DPP_asym_lite.lua  DPP_sym_full.lua  DPP_sym_lite.lua  PositiveBias.lua  README.md  S3_DPP_asym_full.lua  S3_DPP_asym_lite.lua  S3_DPP_sym_full.lua  S3_DPP_sym_lite.lua  SpatialInverseBilateralPooling.cu  SpatialInverseBilateralPooling.lua  common.h  env.lua  ffi.lua  init.lua  merger.lua  s3pool.lua  utils.lua  visinf-1.0-0.rockspec
visinf_package/THC/: README.md
visinf_package/cmake/: FindCudaArch.cmake
